# ComfyUI-GGUF-VLM

./: .gitignore  CHANGELOG.md  COMMUNITY_CONTRIBUTIONS.md  ISSUES_RESOLUTION_SUMMARY.md  MODEL_DOWNLOAD_GUIDE.md  README.md  TROUBLESHOOTING.md  __init__.py  api_routes.py  check_all_nodes.py  cleanup_project.py  custom_model_manager.py  manual_download.sh  model_registry.yaml  pyproject.toml
config/: node_definitions.py  paths.py
core/: inference_engine.py  model_loader.py
core/inference/: transformers_engine.py  unified_api_engine.py
nodes/: __init__.py  memory_manager_node.py  multi_image_node.py  nexa_text_node.py  remote_vision_node.py  system_prompt_node.py  text_node.py  unified_text_node.py  vision_node.py  vision_node_transformers.py
utils/: __init__.py  download_manager.py  downloader.py  mmproj_finder.py
web/: remote_api_config.js
workflows/: Example.json
