[project]
name = "ComfyUI-GGUF-VLM"
description = "ComfyUI multi-modal inference plugin focused on Qwen-VL models with GGUF, Transformers, and Ollama support"
version = "1.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/walke2019/ComfyUI-GGUF-VLM"
"Bug Tracker" = "https://github.com/walke2019/ComfyUI-GGUF-VLM/issues"

[tool.comfy]
DisplayName = "ComfyUI-GGUF-VLM"
PublisherId = "walke2019"
Icon = ""